@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-26T16:25:35Z",
+  "timestamp" : "2022-08-27T01:59:40Z",
   "count_outdated" : 300,
   "uniques_outdated" : 184,
-  "count" : 307,
-  "uniques" : 189,
+  "count" : 311,
+  "uniques" : 192,
   "clones" : [
     {
       "timestamp": "2022-08-15T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-08-26T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ]
     }
   ]
 }
