@@ -1,6 +1,6 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 11,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-15T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-08-26T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
