@@ -1,3 +1,11 @@
+2022-08-27T01:59:40Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2937603631
+* notice: last 14d: unq all: 5 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 300 / 189 307
+* notice: next accum: outdated-unq outdated-all / unq all: 184 300 / 192 311
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2022-08-26]
+
 2022-08-26T16:25:35Z:
 * notice: last 14d: unq all: 3 7
 * notice: prev accum: outdated-unq outdated-all / unq all: 181 295 / 187 303
